--- a/index.html
+++ b/index.html
@@ -228,19 +228,19 @@
   <div class="container">
     <h1>Jinsong Lai</h1>
     <div class="subtitle">
-      M.Sc. Informatik (TU Dresden) · Focus: HCI, Computer Vision, Backend Software Development
+      M.Sc. Informatik (TU Dresden) · Focus: Human-Computer Interaction, Computer Vision, Software Development
     </div>
 
     <div class="contact">
       <a href="./assets/Jinsong_Lai_CV.pdf"><strong>CV (PDF)</strong></a> ·
-      <a href="https://github.com/jinsonglai"><strong>GitHub</strong></a> ·
-      <a href="LINKEDIN_LINK_HERE"><strong>LinkedIn</strong></a> ·
+      <a href="https://github.com/laijinsong"><strong>GitHub</strong></a> ·
+      <a href="https://www.linkedin.com/in/lai-jinsong/"><strong>LinkedIn</strong></a> ·
       <a href="mailto:jinsong.lai@icloud.com"><strong>Email</strong></a>
     </div>
 
     <hr />
 
-    <h2>Selected Projects</h2>
+    <h2>Projects</h2>
 
     <!-- Master Thesis -->
     <section class="project">
@@ -249,18 +249,18 @@
         <p>
           A multimodal learning and interaction system that supports spreadsheet-style arithmetic for blind and visually impaired users through a tactile grid, Braille-labeled tangibles, speech interaction, and camera-based tracking.
         </p>
-        <p><span class="label">My role:</span> I designed and implemented the prototype end-to-end, including the tangible interaction concept, computer-vision modules (grid detection, tangible recognition, hand tracking), arithmetic logic, speech input/output integration, and an initial user evaluation for usability and learning support.</p>
-        <p class="tech"><span class="label">Tech stack:</span> Python · MediaPipe · OpenCV · Raspberry Pi · ASR · Piper TTS · Multimodal Interaction</p>
+        <p><span class="label">My contribution:</span> I designed and implemented the prototype end-to-end, including the tangible interaction concept, computer-vision modules (grid detection, tangible recognition, hand tracking), arithmetic logic, speech input/output integration, and an initial user evaluation for usability and learning support.</p>
+        <p class="tech"><span class="label">Tech stack:</span> Python · MediaPipe · OpenCV · Raspberry Pi · speech recognition (ASR) · Piper TTS </p>
         <p class="links">
           <span class="label">Links:</span>
-          <a href="REPO_LINK_THESIS">Repository</a>
-          <a href="DEMO_SLIDES_LINK_THESIS">Demo + Slides</a>
-          <a href="PAPER_LINK_THESIS">ICCHP Submission / Paper</a>
+          <a href="https://github.com/LaiJinsong/tangible-math-grid">Repository</a>
+          <a href="https://datashare.tu-dresden.de/s/oJk5aYJbNH9N4JG">Demo + Slide</a>
+          <a href="./assets/drag-and-speak-icchp-abstract.pdf">ICCHP submission (under review)</a>
         </p>
       </div>
       <div class="gallery" data-gallery="thesis">
-        <img class="thumb" src="./assets/images/thesis-1.png" alt="Thesis system overview" data-caption="Master Thesis · System Overview">
-        <img class="thumb" src="./assets/images/thesis-2.png" alt="Thesis prototype setup" data-caption="Master Thesis · Prototype Setup">
+        <img class="thumb" src="./assets/images/thesis-1.png" alt="System Overview" data-caption="Master Thesis · System Overview">
+        <img class="thumb" src="./assets/images/thesis-2.png" alt="Thesis prototype setup" data-caption="Master Thesis · A user exploring the tactile grid and placing 3D-printed tangibles">
       </div>
     </section>
 
@@ -271,17 +271,18 @@
         <p>
           A multimodal dashboard for blind and visually impaired users to monitor real-time sensor data via speech and sonification, with Kafka-based streaming and screen-reader-compatible interaction.
         </p>
-        <p><span class="label">My role:</span> I was mainly responsible for frontend page development, page configuration logic, and dashboard display logic, including UI implementation, configuration workflows, and real-time data integration with backend services.</p>
-        <p class="tech"><span class="label">Tech stack:</span> Vue.js · Spring Boot · Apache Kafka · WebSocket (STOMP/SockJS) · Web Audio API · SpeechSynthesis · ARIA</p>
+        <p><span class="label">My cintribution:</span> I was mainly responsible for frontend page development, page configuration logic, and dashboard display logic, including UI implementation, configuration workflows, and real-time data integration with backend services.</p>
+        <p class="tech"><span class="label">Tech stack:</span> Vue.js · Spring Boot · Apache Kafka · WebSocket · Web Audio API · SpeechSynthesis · ARIA</p>
         <p class="links">
           <span class="label">Links:</span>
-          <a href="REPO_LINK_MULTISENSE">Repository</a>
-          <a href="DEMO_SLIDES_LINK_MULTISENSE">Demo + Slides</a>
+          <a href="https://github.com/LaiJinsong/multisense-dashboard">Repository</a>
+          <a href="https://datashare.tu-dresden.de/s/wdoF8gSKzLD86jk">Demo + Slide</a>
         </p>
       </div>
-      <div class="gallery" data-gallery="multisense">
-        <img class="thumb" src="./assets/images/multisense-1.png" alt="MultiSense dashboard UI" data-caption="MultiSense Dashboard · Main Interface">
-        <img class="thumb" src="./assets/images/multisense-2.png" alt="MultiSense configuration UI" data-caption="MultiSense Dashboard · Configuration View">
+      <div class="gallery" data-gallery="dashboard">
+        <img class="thumb" src="./assets/images/dashboard-1.jpeg" alt="Sensor Configuration 1" data-caption="MultiSense Dashboard · Sensor Configuration 1">
+        <img class="thumb" src="./assets/images/dashboard-2.jpeg" alt="Sensor Configuration 2" data-caption="MultiSense Dashboard · Sensor Configuration 2">
+        <img class="thumb" src="./assets/images/dashboard-3.jpeg" alt="Dashboard" data-caption="MultiSense Dashboard · Monitoring Dashboard">
       </div>
     </section>
 
@@ -292,17 +293,18 @@
         <p>
           A smart headphone support system for autistic users in office environments, combining ANC control, ambient sound monitoring, and adaptive masking noise to reduce distracting sounds such as speech and background noise.
         </p>
-        <p><span class="label">My role:</span> I was mainly responsible for the ambient noise masking module, including masking strategy research and real-time masking-noise generation/adaptation based on detected sound types (for example voice vs. non-voice), with a focus on smooth transitions and reduced distraction.</p>
-        <p class="tech"><span class="label">Tech stack:</span> Python · Django · SQLite · WebSocket · OpenAPI · PyTorch · Silero VAD/STT · NumPy · torchaudio</p>
+        <p><span class="label">My contribution:</span> I was mainly responsible for the ambient noise masking module, including masking strategy research and real-time masking-noise generation/adaptation based on detected sound types (for example voice vs. non-voice), with a focus on smooth transitions and reduced distraction.</p>
+        <p class="tech"><span class="label">Tech stack:</span> Python · Django · SQLite · WebSocket · OpenAPI · PyTorch · NumPy</p>
         <p class="links">
           <span class="label">Links:</span>
-          <a href="REPO_LINK_ANC">Repository</a>
-          <a href="DEMO_SLIDES_LINK_ANC">Demo + Slides</a>
+          <a href="https://github.com/LaiJinsong/smart-anc">Repository</a>
+          <a href="https://datashare.tu-dresden.de/s/EyPw5w7AqyTrREa">Demo + Slide</a>
         </p>
       </div>
       <div class="gallery" data-gallery="anc">
-        <img class="thumb" src="./assets/images/anc-1.png" alt="Smart ANC sensor configuration" data-caption="Smart ANC · Sensor Configuration">
-        <img class="thumb" src="./assets/images/anc-2.png" alt="Smart ANC dashboard" data-caption="Smart ANC · Dashboard">
+        <img class="thumb" src="./assets/images/anc-1.png" alt="Package diagram" data-caption="Smart ANC · Package diagram">
+        <img class="thumb" src="./assets/images/anc-2.png" alt="Process diagram" data-caption="Smart ANC · Process diagram">
+        <img class="thumb" src="./assets/images/anc-3.png" alt="UI" data-caption="Smart ANC · The reworked speaker addition (A) and customization (B) pages of the web UI">
       </div>
     </section>
 
